# hex-motor-example

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/: CMakeLists.txt
cpp/src/: canopen.cpp  canopen.hpp  hex_motor.cpp  hex_motor.hpp  main.cpp
python/: canopen.py  hex_motor.py  main.py  requirements.txt
